--- a/src/index.css
+++ b/src/index.css
@@ -67,13 +67,18 @@ button:focus-visible {
   }
 } */
 
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
 
 body {
   font-family: 'Poppins', sans-serif;
 }
+
+h1, h2, h3, h4, h5, p, span, a, button {
+  font-family: 'Poppins', sans-serif;
+}
+
 
 @keyframes flipText {
   0% {
